# hybrid-biped

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: biped_conf.py  closed_loop_woTSID.py  inverse_geom_example.py  linear_1dof.py  linear_2dof_MPC_WB.py  linear_2dof_toWB.py  linear_2dof_withMPC.py  plot_utils.py  walking_CL.py  walking_TEMP.py  walking_TSID.py  walking_ol.py  walking_tsid.py
matlab/: dz.m  hlipm_LMI.m  sat.m
python/: CMakeLists.txt
python/hybrid_biped/: ClassicMPC.py  HybridLIPM.py  InverseKinematics.py  LIPM_to_WBD.py  LinearMPC.py  Params.py  TSID.py  __init__.py  inverse_geometry.py
